--- a/00_pytorch_fundmentals.ipynb
+++ b/00_pytorch_fundmentals.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMmUasNmCkc+6UPewgb5K3P",
+      "authorship_tag": "ABX9TyMLuXn8wAdXdq4vnkReI15a",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "dag0uaaXkSRI"
       },
@@ -50,15 +50,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LBCJV0I5ks9x",
-        "outputId": "e42ace73-df51-4353-b68f-727adc4f9a58"
+        "outputId": "c2e9fdf5-673b-4e20-a10e-565804e9b70a"
       },
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "2.1.0+cu118\n"
+            "2.1.0+cu121\n"
           ]
         }
       ]
@@ -67,23 +67,572 @@
       "cell_type": "code",
       "source": [
         "scalar = torch.tensor(7)\n",
-        "print(scalar)"
+        "scalar"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "q_2WW8KqliSs",
-        "outputId": "2baf501e-a391-45ca-dc84-9a098f07e50f"
+        "outputId": "571275dd-d0d6-41a2-a207-c04e0802c309"
       },
-      "execution_count": 4,
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor(7)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "scalar.ndim"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ybsE36MLlr82",
+        "outputId": "b4e61267-9083-4cd8-a8e3-744d8a6c230c"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# thi tensor is just a single int '7'\n",
+        "scalar.item()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HNx7d0izp0HN",
+        "outputId": "a1339178-9ae1-47de-b5f2-62cedaa8808d"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "7"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "vector = torch.tensor([7, 7])\n",
+        "vector"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JoETWb23p82R",
+        "outputId": "ae16ed26-e4e2-4fe3-f999-aa851d3c3ca8"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([7, 7])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "vector.ndim"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nZFu6t5sqXZZ",
+        "outputId": "d1274850-b8a5-4660-8dd7-24c3d208af68"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "vector.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "AyU-32W_qaeQ",
+        "outputId": "da24c359-ae18-442d-a186-223e79132b06"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.Size([2])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "MATRIX = torch.tensor([[1,2], [3,4]])\n",
+        "print(MATRIX)\n",
+        "print(MATRIX.ndim)\n",
+        "print(MATRIX.shape)\n",
+        "print(MATRIX[1])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gBL9fS8mqcfq",
+        "outputId": "ead4a7c1-a5e6-469e-ffe7-74b90040c033"
+      },
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "tensor(7)\n"
+            "tensor([[1, 2],\n",
+            "        [3, 4]])\n",
+            "2\n",
+            "torch.Size([2, 2])\n",
+            "tensor([3, 4])\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "TENSOR = torch.tensor([[[1,2], [3,4]], [[5,6], [7,8]]])\n",
+        "print(TENSOR)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Nxq4qFhO1mio",
+        "outputId": "04dd739b-8525-477c-b46f-1971b97b353e"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([[[1, 2],\n",
+            "         [3, 4]],\n",
+            "\n",
+            "        [[5, 6],\n",
+            "         [7, 8]]])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "TENSOR.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SxtQaZ2b3CsO",
+        "outputId": "1e19b322-916d-4196-aef6-d631fdc2a34a"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.Size([2, 2, 2])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "TENSOR[0]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VNgcv2Ll3VSW",
+        "outputId": "e5588698-1f79-4655-ef5f-d2332cd11aee"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[1, 2],\n",
+              "        [3, 4]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 27
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Random Tensors"
+      ],
+      "metadata": {
+        "id": "tlgVJsQZ5SGs"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "random_tensor = torch.rand(2, 2, 2)\n",
+        "random_tensor"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XjPvgzrmUiNg",
+        "outputId": "207b2eff-afc3-4457-a02d-7f37ea174b4a"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[[0.7363, 0.5382],\n",
+              "         [0.3447, 0.6321]],\n",
+              "\n",
+              "        [[0.5337, 0.0752],\n",
+              "         [0.8683, 0.8363]]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "random_tensor.dtype"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hGUt-UNhYRb3",
+        "outputId": "8474858b-d7e1-475c-dce5-1972d33c18ad"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.float32"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 44
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# represnt an image as x, y, rgb color values e.g.\n",
+        "random_image_tensor = torch.rand(224, 224, 3)  # x, y, color channel\n",
+        "random_image_tensor_via_size = torch.rand(size=(3, 3, 3))  # can optionally use 'size' parameter\n",
+        "print(random_image_tensor.shape)\n",
+        "print(random_image_tensor_via_size.shape)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "OCHY3LmQ5WNq",
+        "outputId": "fd8b94c5-ea51-429f-accf-b70e2d1cbb9c"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "torch.Size([224, 224, 3])\n",
+            "torch.Size([3, 3, 3])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Zero's and Ones Tensor"
+      ],
+      "metadata": {
+        "id": "iWNJ9U63VwFL"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "zeros = torch.zeros(2, 2)\n",
+        "zeros"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "eAaCRHAZWIkp",
+        "outputId": "e810a82d-21c1-4dd1-cf04-82301f9597ba"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0., 0.],\n",
+              "        [0., 0.]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 32
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ones = torch.ones(2, 2)\n",
+        "ones"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8OhAN8PdWhHw",
+        "outputId": "8db974b2-5720-44cb-bd3a-8586d297f78a"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[1., 1.],\n",
+              "        [1., 1.]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 33
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# zeroes and ones can be used as masks - then multiply tensors\n",
+        "zeros * ones"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "thic3H5lWoTn",
+        "outputId": "62d8fd09-4cdc-49a9-8292-b0ec65b92561"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0., 0.],\n",
+              "        [0., 0.]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 36
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# get type of values\n",
+        "ones.dtype"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "k1WfjBwGWqeQ",
+        "outputId": "0f8f5233-42cd-4704-ff98-bfded09c8f47"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.float32"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 37
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.range(0, 10)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "60V3NiahW8oh",
+        "outputId": "59a829e0-f8f7-473a-99d8-752acb522d3b"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "<ipython-input-38-cf0dcdb325c8>:1: UserWarning: torch.range is deprecated and will be removed in a future release because its behavior is inconsistent with Python's range builtin. Instead, use torch.arange, which produces values in [start, end).\n",
+            "  torch.range(0, 10)\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([ 0.,  1.,  2.,  3.,  4.,  5.,  6.,  7.,  8.,  9., 10.])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 38
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# prefer torch.arange()\n",
+        "tensor_range = torch.arange(0, 10)\n",
+        "tensor_range"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "czwCbGpIXga0",
+        "outputId": "716f852d-f75f-493d-8734-7fed1eaaa0fa"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 42
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tensor_range.dtype  # note these are int64, not float32 like tensor created via rand, ones, zeros"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "J37Ev5DlXodA",
+        "outputId": "dd3a08e4-5a5d-4945-e337-2cd99f0470fa"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 45
         }
       ]
     },
@@ -91,7 +640,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "ybsE36MLlr82"
+        "id": "Qu5BsA21YCMc"
       },
       "execution_count": null,
       "outputs": []
