--- a/00_pytorch_exercises.ipynb
+++ b/00_pytorch_exercises.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPYgyJtyhSo7v7Mic/QzD3E",
+      "gpuType": "T4",
+      "authorship_tag": "ABX9TyOMlwvi1IvWmK4PTmseAN38",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -13,7 +14,8 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -28,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "id": "ysW1GukTCfoP"
       },
@@ -57,25 +59,25 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-JbIJj3SCwQ4",
-        "outputId": "0a0cf706-dbde-4fd4-ff3c-a3ff7c94b7a5"
+        "outputId": "98324dcc-2dac-4025-a2d5-dbabf853c724"
       },
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "tensor([[0.6771, 0.6437, 0.0843, 0.7566, 0.1384, 0.4843, 0.3655],\n",
-              "        [0.2865, 0.4903, 0.5472, 0.1984, 0.5829, 0.6936, 0.3564],\n",
-              "        [0.1936, 0.5898, 0.4907, 0.8787, 0.7554, 0.3174, 0.2363],\n",
-              "        [0.6021, 0.0911, 0.0048, 0.3376, 0.9671, 0.8771, 0.5789],\n",
-              "        [0.4942, 0.6087, 0.4681, 0.5928, 0.2025, 0.2510, 0.5836],\n",
-              "        [0.4638, 0.8036, 0.9768, 0.7730, 0.1415, 0.4306, 0.9431],\n",
-              "        [0.3332, 0.8791, 0.6626, 0.3788, 0.9929, 0.2360, 0.9407]])"
+              "tensor([[0.4464, 0.7262, 0.7978, 0.5282, 0.5291, 0.0395, 0.4445],\n",
+              "        [0.7007, 0.1409, 0.5229, 0.8175, 0.5169, 0.7479, 0.1127],\n",
+              "        [0.9831, 0.5576, 0.0797, 0.2035, 0.3374, 0.4936, 0.8173],\n",
+              "        [0.9805, 0.0589, 0.5888, 0.0545, 0.7712, 0.8692, 0.7501],\n",
+              "        [0.0249, 0.8778, 0.1847, 0.8977, 0.5147, 0.2224, 0.1602],\n",
+              "        [0.9980, 0.6186, 0.3691, 0.0829, 0.0463, 0.9409, 0.1528],\n",
+              "        [0.6104, 0.5196, 0.1571, 0.7471, 0.8060, 0.0117, 0.4592]])"
             ]
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 3
         }
       ]
     },
@@ -91,40 +93,40 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Js3c86VACzoX",
-        "outputId": "3fb6787e-fc57-42cd-9d75-e5c35816bb59"
+        "outputId": "3a25a859-8e1a-46bb-fe53-6ea4ec01f917"
       },
-      "execution_count": 11,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "(tensor([[0.6771, 0.6437, 0.0843, 0.7566, 0.1384, 0.4843, 0.3655],\n",
-              "         [0.2865, 0.4903, 0.5472, 0.1984, 0.5829, 0.6936, 0.3564],\n",
-              "         [0.1936, 0.5898, 0.4907, 0.8787, 0.7554, 0.3174, 0.2363],\n",
-              "         [0.6021, 0.0911, 0.0048, 0.3376, 0.9671, 0.8771, 0.5789],\n",
-              "         [0.4942, 0.6087, 0.4681, 0.5928, 0.2025, 0.2510, 0.5836],\n",
-              "         [0.4638, 0.8036, 0.9768, 0.7730, 0.1415, 0.4306, 0.9431],\n",
-              "         [0.3332, 0.8791, 0.6626, 0.3788, 0.9929, 0.2360, 0.9407]]),\n",
-              " tensor([[0.4236, 0.8703, 0.4785, 0.4182, 0.7524, 0.0454, 0.9493]]),\n",
-              " tensor([[0.4236],\n",
-              "         [0.8703],\n",
-              "         [0.4785],\n",
-              "         [0.4182],\n",
-              "         [0.7524],\n",
-              "         [0.0454],\n",
-              "         [0.9493]]),\n",
-              " tensor([[1.6769],\n",
-              "         [1.7012],\n",
-              "         [2.0047],\n",
-              "         [1.7948],\n",
-              "         [1.9288],\n",
-              "         [2.7079],\n",
-              "         [3.0324]]))"
+              "(tensor([[0.4464, 0.7262, 0.7978, 0.5282, 0.5291, 0.0395, 0.4445],\n",
+              "         [0.7007, 0.1409, 0.5229, 0.8175, 0.5169, 0.7479, 0.1127],\n",
+              "         [0.9831, 0.5576, 0.0797, 0.2035, 0.3374, 0.4936, 0.8173],\n",
+              "         [0.9805, 0.0589, 0.5888, 0.0545, 0.7712, 0.8692, 0.7501],\n",
+              "         [0.0249, 0.8778, 0.1847, 0.8977, 0.5147, 0.2224, 0.1602],\n",
+              "         [0.9980, 0.6186, 0.3691, 0.0829, 0.0463, 0.9409, 0.1528],\n",
+              "         [0.6104, 0.5196, 0.1571, 0.7471, 0.8060, 0.0117, 0.4592]]),\n",
+              " tensor([[0.2401, 0.6997, 0.3215, 0.9774, 0.0588, 0.5581, 0.2819]]),\n",
+              " tensor([[0.2401],\n",
+              "         [0.6997],\n",
+              "         [0.3215],\n",
+              "         [0.9774],\n",
+              "         [0.0588],\n",
+              "         [0.5581],\n",
+              "         [0.2819]]),\n",
+              " tensor([[1.5665],\n",
+              "         [1.7135],\n",
+              "         [1.3765],\n",
+              "         [1.2610],\n",
+              "         [1.7564],\n",
+              "         [1.4430],\n",
+              "         [1.4742]]))"
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 4
         }
       ]
     },
@@ -142,9 +144,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "g0eFpL6xDB-G",
-        "outputId": "af9e4d0b-775a-43d1-b8b6-e87ff505bd51"
+        "outputId": "424f7179-59ee-445a-cde5-580f75876a0c"
       },
-      "execution_count": 12,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -175,7 +177,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 5
         }
       ]
     },
@@ -193,9 +195,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2-e--IzXEGY4",
-        "outputId": "73a79768-60df-4842-cd44-69e5f0365560"
+        "outputId": "8e35602b-8eb6-4d2d-ef2d-cd6a25020403"
       },
-      "execution_count": 13,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -226,7 +228,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 6
         }
       ]
     },
@@ -234,14 +236,207 @@
       "cell_type": "code",
       "source": [
         "torch.manual_seed(0)\n",
-        "torch.cuda.seed_all(0)\n",
-        "t = torch.rand(7, 7)\n",
-        "t2 = torch.rand(1, 7)\n",
+        "torch.cuda.manual_seed_all(0)\n",
+        "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
+        "t = torch.rand(7, 7, device=device)\n",
+        "t2 = torch.rand(1, 7, device=device)\n",
         "t3 = t2.transpose(1, 0)  # change order of dimensions\n",
         "t, t2, t3, torch.mm(t, t3)"
       ],
       "metadata": {
-        "id": "FwEoU8kVEHeX"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FwEoU8kVEHeX",
+        "outputId": "53a31ebb-37cc-4510-c6a5-76eb3f7145d9"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(tensor([[0.3990, 0.5167, 0.0249, 0.9401, 0.9459, 0.7967, 0.4150],\n",
+              "         [0.8203, 0.2290, 0.9096, 0.1183, 0.0752, 0.4092, 0.9601],\n",
+              "         [0.2093, 0.1940, 0.8909, 0.4387, 0.3570, 0.5454, 0.8299],\n",
+              "         [0.2099, 0.7684, 0.4290, 0.2117, 0.6606, 0.1654, 0.4250],\n",
+              "         [0.9927, 0.6964, 0.2472, 0.7028, 0.7494, 0.9303, 0.0494],\n",
+              "         [0.0750, 0.7223, 0.9478, 0.3647, 0.2215, 0.7784, 0.6391],\n",
+              "         [0.2077, 0.7045, 0.9609, 0.0594, 0.3358, 0.0616, 0.7030]],\n",
+              "        device='cuda:0'),\n",
+              " tensor([[0.9722, 0.7910, 0.4690, 0.3300, 0.3345, 0.3783, 0.7640]],\n",
+              "        device='cuda:0'),\n",
+              " tensor([[0.9722],\n",
+              "         [0.7910],\n",
+              "         [0.4690],\n",
+              "         [0.3300],\n",
+              "         [0.3345],\n",
+              "         [0.3783],\n",
+              "         [0.7640]], device='cuda:0'),\n",
+              " tensor([[2.0534],\n",
+              "         [2.3578],\n",
+              "         [1.8793],\n",
+              "         [1.6912],\n",
+              "         [2.5042],\n",
+              "         [2.0659],\n",
+              "         [1.9022]], device='cuda:0'))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.manual_seed(1234)\n",
+        "rt1 = torch.rand(2, 3).to(device=device)\n",
+        "rt2 = torch.rand(2, 3).to(device=device)\n",
+        "rt1, rt2"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "G-jogSWDEzQn",
+        "outputId": "6a8513b7-4118-4683-b251-683bd1ccbe36"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(tensor([[0.0290, 0.4019, 0.2598],\n",
+              "         [0.3666, 0.0583, 0.7006]], device='cuda:0'),\n",
+              " tensor([[0.0518, 0.4681, 0.6738],\n",
+              "         [0.3315, 0.7837, 0.5631]], device='cuda:0'))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "rt3 = rt2.transpose(1, 0)  # ready to matrix multiply\n",
+        "mm = torch.mm(rt1, rt3)\n",
+        "rt3, mm"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NiuMMWhrF4Jm",
+        "outputId": "07eb5b22-557e-416b-e222-226e8d1f5e76"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(tensor([[0.0518, 0.3315],\n",
+              "         [0.4681, 0.7837],\n",
+              "         [0.6738, 0.5631]], device='cuda:0'),\n",
+              " tensor([[0.3647, 0.4709],\n",
+              "         [0.5184, 0.5617]], device='cuda:0'))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "mm.min(), mm.max()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "huZ5GOTQGMnk",
+        "outputId": "439d1465-df55-4473-e51b-4208738c4b57"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(tensor(0.3647, device='cuda:0'), tensor(0.5617, device='cuda:0'))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "mm.argmin(), mm.argmax()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "EVpZF-bjGaX9",
+        "outputId": "1f709a7c-4cf5-417e-a12c-7e6ed00504ea"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(tensor(0, device='cuda:0'), tensor(3, device='cuda:0'))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.manual_seed(7)\n",
+        "rt1 = torch.rand(1, 1, 1, 10)\n",
+        "rt2 = rt1.squeeze()\n",
+        "rt1.shape, rt2.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_E3NVFJZG1-G",
+        "outputId": "5ded5016-2a9f-44b7-d865-ca4e3efb3780"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(torch.Size([1, 1, 1, 10]), torch.Size([10]))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "3qc6CjsWHUbZ"
       },
       "execution_count": null,
       "outputs": []
