--- a/01_pytorch_workflow.ipynb
+++ b/01_pytorch_workflow.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMKq7qlWtH4pFnw9um18iLy",
+      "authorship_tag": "ABX9TyNhiz8uru/+kf3eN+VaAOov",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -761,13 +761,13 @@
         "MODEL_PATH.mkdir(parents=True, exist_ok=True)\n",
         "\n",
         "# 2. Create model save path\n",
-        "MODEL_NAME = \"01_pytorch_workflow_model_0.pth\"\n",
+        "MODEL_NAME = \"01_pytorch_workflow_model_0.pth\"  # .pth refers to PyTorcH\n",
         "MODEL_SAVE_PATH = MODEL_PATH / MODEL_NAME  # / on Path is overridden!\n",
         "\n",
         "# 3. Save the model state dict\n",
         "print(f\"Saving model to: {MODEL_SAVE_PATH}\")\n",
-        "torch.save(obj=model_0.state_dict(), # only saving the state_dict() only saves the models learned parameters\n",
-        "           f=MODEL_SAVE_PATH)"
+        "# only saving the state_dict() only saves the models learned parameters\n",
+        "torch.save(obj=model_0.state_dict(), f=MODEL_SAVE_PATH)"
       ],
       "metadata": {
         "id": "wtmrUf8EY846",
@@ -786,6 +786,88 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# load the state dict into a new instance of model_0\n",
+        "model_state = torch.load(MODEL_SAVE_PATH)\n",
+        "print(f'loaded:{model_state}')\n",
+        "loaded_model_0 = LinearRegressionModel()\n",
+        "loaded_model_0.load_state_dict(model_state)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "B75Ualye6-z0",
+        "outputId": "e938490c-ed98-495f-ef17-2ce2bd260957"
+      },
+      "execution_count": 85,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "loaded:OrderedDict([('weights', tensor([0.6799])), ('bias', tensor([0.3003]))])\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<All keys matched successfully>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 85
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# use the new model instance to make predictions\n",
+        "loaded_model_0(X_test)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nMYaCxfN68-e",
+        "outputId": "2c31e3fb-8857-42b3-c49a-74c90b159906"
+      },
+      "execution_count": 86,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[1.1595],\n",
+              "        [1.1741],\n",
+              "        [1.1885],\n",
+              "        [1.2028],\n",
+              "        [1.2171],\n",
+              "        [1.2312],\n",
+              "        [1.2452],\n",
+              "        [1.2591],\n",
+              "        [1.2729],\n",
+              "        [1.2867]], grad_fn=<AddBackward0>)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 86
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "T9Dyp5jA73P_"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
